# business-board-game

./: .gitignore  DEPLOYMENT.md  PRODUCTION_CITY_PLAN.md  README.md  RUNNING.md  SIMULATION_COMMANDS.md  SIMULATION_RESULTS_OVERVIEW.md  SIMULATION_RESULTS_any.md  SIMULATION_RESULTS_capitalist.md  SIMULATION_RESULTS_fraudster.md  SIMULATION_RESULTS_journalist.md  SIMULATION_RESULTS_mafia.md  SIMULATION_RESULTS_military.md  SIMULATION_RESULTS_politician.md  requirements.txt  satirical_business_game_design.md  vercel.json
api/: index.py
backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  city_api.py  game_manager.py  http_middleware.py  main.py  routes.py  schemas.py
backend/city_bots/: __init__.py  policy.py
backend/city_engine/: __init__.py  commands.py  constants.py  content.py  engine.py  errors.py  factory.py  models.py  replay.py  rng.py  serialization.py
backend/city_engine/content/: catalog.json
backend/city_rooms/: __init__.py  errors.py  models.py  repository.py  security.py  service.py  upstash.py  views.py
backend/data/: balance.json  cell_effects.json  cells.json  question_cards.json  roles.json
backend/data/boards/: board_60.json  board_72.json
backend/game_engine/: __init__.py  board_builder.py  config.py  config_loader.py  engine.py  enums.py  events.py  factory.py  models.py  registry.py  rng.py
backend/game_engine/cells/: __init__.py  base.py  cards.py  common.py  dangers.py  effects.py  fillers.py  places.py  properties.py  protection.py  pvp.py  role_cell.py  role_power.py  services.py
backend/simulation/: __init__.py  bots.py  cli.py  report.py  runner.py  stats.py  suite.py
backend/tests/: test_api.py  test_board.py  test_cells.py  test_city_api.py  test_city_bots.py  test_city_engine.py  test_city_foundation.py  test_city_mechanics.py  test_city_rooms.py  test_engine.py  test_http_hardening.py  test_map_pick.py  test_production_simulation.py  test_roles.py
docs/: ARCHITECTURE.md  CITY_ENGINE_PARITY.md  DIGITAL_CITY_PROTOTYPE.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: simulate-city.mjs
frontend/src/: App.tsx  api.ts  main.tsx  (+3 more)
(+20 files in other folders)
