[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "business-board-game-backend"
version = "0.1.0"
description = "Authoritative backend, game engine and simulation for City of Influence."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pydantic>=2.6,<3.0",
    "upstash-redis>=1.0,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "httpx>=0.27,<1.0", "ruff>=0.4,<1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "city_bots*", "city_engine*", "city_rooms*", "simulation*"]

[tool.setuptools.package-data]
city_engine = ["content/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic
